--- a/css/estilos.css
+++ b/css/estilos.css
@@ -198,7 +198,7 @@ body {
   font-size: 1em;
 }
 .contact input {
-  background: #2a2a4d;
+  background: #57ed61;
   color: var(--text);
 }
 .contact button {
